--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Hello</h1><br><br>
 
-This is the github pages site of <a href="www.bbv.ch">bbv Software Services AG</a>.<br> 
+This is the github pages site of <a href="http://www.bbv.ch">bbv Software Services AG</a>.<br> 
 There is no beautiful site here - for now - so it is best to check out our <a href="https://github.com/bbvch/">normal GitHub</a> page. 
 <br><br>
 Cheers, 
