Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,8 +1,82 @@
-<h1>Hello</h1><br><br>
+<!DOCTYPE html>
+<html>
 
-This is the github pages site of <a href="http://www.bbv.ch">bbv Software Services AG</a>.<br> 
-There is no beautiful site here - for now - so it is best to check out our <a href="https://github.com/bbvch/">normal GitHub</a> page. 
-<br><br>
-Cheers, 
-<br><br>
-The bbv team
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Bbvch.GitHub.io : BBVCH github pages">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Bbvch.GitHub.io</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/bbvch">View on GitHub</a>
+
+          <h1 id="project_title">Bbvch.GitHub.io</h1>
+          <h2 id="project_tagline">BBVCH github pages</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a id="hey-there" class="anchor" href="#hey-there" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hey there</h3>
+
+<p>This is the github pages site of <a href="https://www.bbv.ch/">bbv Software Services AG</a>.
+There is not much content here - for now.  </p>
+
+<p>Cheers, </p>
+
+<p>The bbv team</p>
+
+<h3>
+<a id="embedded-repositories" class="anchor" href="#embedded-repositories" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Embedded Repositories</h3>
+
+<p><a href="azurewebsockets">https://github.com/bbvch/azurewebsockets</a></p>
+
+<h3>
+<a id="net-repositories" class="anchor" href="#net-repositories" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>.Net Repositories</h3>
+
+<p><a href="azureWebNet">https://github.com/bbvch/azureWebNet</a></p>
+
+<h3>
+<a id="authors-and-contributors---in-alphabetical-order" class="anchor" href="#authors-and-contributors---in-alphabetical-order" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors - in alphabetical order</h3>
+
+<p>@akasilob
+<a href="https://github.com/butzist" class="user-mention">@butzist</a>
+<a href="https://github.com/chspeck" class="user-mention">@chspeck</a>
+<a href="https://github.com/DanielBernhard" class="user-mention">@DanielBernhard</a>
+<a href="https://github.com/Deadolus" class="user-mention">@Deadolus</a>
+<a href="https://github.com/entiPi" class="user-mention">@entiPi</a>
+@FabianTrottman
+<a href="https://github.com/froko" class="user-mention">@froko</a>
+<a href="https://github.com/Jokymon" class="user-mention">@Jokymon</a>
+<a href="https://github.com/meshell" class="user-mention">@meshell</a>
+<a href="https://github.com/messi1" class="user-mention">@messi1</a>
+<a href="https://github.com/PoliM" class="user-mention">@PoliM</a>
+<a href="https://github.com/ravicini" class="user-mention">@ravicini</a>
+<a href="https://github.com/tiefenauer" class="user-mention">@tiefenauer</a>
+<a href="https://github.com/ursenzler" class="user-mention">@ursenzler</a>
+<a href="https://github.com/ursfassler" class="user-mention">@ursfassler</a></p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
+</html>
