Fixing repository links

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@ There is not much content here - for now.  </p>
 <h3>
 <a id="embedded-repositories" class="anchor" href="#embedded-repositories" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Embedded Repositories</h3>
 
-<p><a href="azurewebsockets">https://github.com/bbvch/azurewebsockets</a></p>
+<p><a href="https://github.com/bbvch/azurewebsockets">azurewebsockets</a></p>
 
 <h3>
 <a id="net-repositories" class="anchor" href="#net-repositories" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>.Net Repositories</h3>
 
-<p><a href="azureWebNet">https://github.com/bbvch/azureWebNet</a></p>
+<p><a href="https://github.com/bbvch/azureWebNet">azureWebNet</a></p>
 
 <h3>
 <a id="authors-and-contributors---in-alphabetical-order" class="anchor" href="#authors-and-contributors---in-alphabetical-order" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors - in alphabetical order</h3>
