Making text more fitting to momentary status
Signed-off-by: Simon Egli <simon.egli@bbv.ch>

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 <a id="hey-there" class="anchor" href="#hey-there" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hey there</h3>
 
 <p>This is the github pages site of <a href="https://www.bbv.ch/">bbv Software Services AG</a>.
-There is not much content here - for now.  </p>
+There is not much content here.  <br>
+Best to check out our regular <a href="https://github.com/bbvch">github site</a>.<br>
+Nonetheless, you may find an (probably incomplete) list of repositories below.</p>
 
 <p>Cheers, </p>
 
